<resources>
    <string name="app_name">InkLauncher</string>

    <string name="activity_setting_title">Settings</string>

    <string name="dialog_app_info_uninstall_text">Uninstall</string>
    <string name="dialog_app_info_disable_text">Disable</string>
    <string name="dialog_app_info_hide_text">Hide</string>
    <string name="dialog_app_info_show_text">Show</string>
    <string name="dialog_app_info_text">App info</string>

    <string name="dialog_app_uninstall_confirm_text">Uninstall %s ?</string>
    <string name="dialog_app_disable_confirm_text">Disable %s ?</string>
    <string name="dialog_app_hide_confirm_text">Hide %s ?</string>
    <string name="dialog_app_show_confirm_text">Show %s ?</string>

    <string name="dialog_positive_text">Confirm</string>
    <string name="dialog_negative_text">Cancel</string>

    <string name="setting_group_basic">Basic Settings</string>
    <string name="setting_enable_back_to_home_notification_title">Enable Back to Home Notification</string>
    <string name="setting_enable_back_to_home_notification_summary">Enable Back to Home Notification</string>
    <string name="setting_enable_floating_ball_title">Floating Ball</string>
    <string name="setting_enable_floating_ball_summary">Enable or disable floating ball</string>
    <string name="setting_enable_aod_title">Always on Display</string>
    <string name="setting_enable_aod_summary">Enable or disable always on display</string>
    <string name="setting_aod_landscape_title">Aod Landscape</string>
    <string name="setting_aod_landscape_summary">Landscape in aod</string>
    <string name="setting_enable_double_click_lock_title">Double click lock</string>
    <string name="setting_enable_double_click_lock_summary">Double click the time widget in toolbar to lock screen</string>
    <string name="setting_show_hided_app_title">Show hided app</string>
    <string name="setting_show_hided_app_summary">Show All app in launcher, include hided app</string>

    <string name="setting_group_system">System Settings</string>
    <string name="setting_wireless_title">Wireless Setting</string>
    <string name="setting_display_title">Display Setting</string>
    <string name="setting_date_title">Time And Date Setting</string>
    <string name="setting_accessibility_title">Accessibility Setting</string>
    <string name="setting_input_method_title">Input Method Setting</string>
    <string name="setting_device_manager_title">Device Manager</string>
    <string name="setting_app_manager_title">Application Manager</string>

    <string name="notification_channel_intent_id">intent</string>
    <string name="notification_channel_intent_name">Intent Notification</string>

    <string name="notification_back_to_home_title">Back to home</string>
    <string name="notification_back_to_home_content">Click Notification to back to home</string>

    <string name="accessibility_service_floating_ball_description">Enable to use floating ball for back</string>

    <string name="toast_aod_double_click_to_back_to_home">double click to back to home</string>
</resources>