<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setting_group_basic">

        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_back_to_home_notification"
            android:title="@string/setting_enable_back_to_home_notification_title"
            android:summary="@string/setting_enable_back_to_home_notification_summary" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_floating_ball"
            android:title="@string/setting_enable_floating_ball_title"
            android:summary="@string/setting_enable_floating_ball_summary" />

    </PreferenceCategory>


</PreferenceScreen>